<resources>
    <string name="app_name">Chat App</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="your_username">Your username</string>
    <string name="your_password">Your password</string>
    <string name="sign_in_to_begin_your_conversation">Sign in to begin your conversation</string>
    <string name="sign_in">Sign in</string>
    <string name="or">or</string>
    <string name="sign_up">Sign up</string>
    <string name="retype_password">Retype password</string>
    <string name="sign_up_to_connect_to_the_world">Sign up to connect to the world</string>
    <string name="welcome">Welcome,</string>
    <string name="already_have_account">Already have account?</string>
    <string name="search_friend">Search friend</string>
    <string name="friend">Friend</string>
    <string name="request">Request</string>
    <string name="group">Group</string>
    <string name="network">Network</string>
    <string name="search_group">Search group</string>
    <string name="_3_members">3 members</string>
    <string name="back">Back</string>
    <string name="profile">Profile</string>
    <string name="user_avatar">User avatar</string>
    <string name="update_profile">Update profile</string>
    <string name="search">Search</string>
    <string name="finding_your_soul_mate">Finding your soul mate…</string>
    <string name="do_not_have_any_friend_find_now">Don\'t have any friend? Find one :)</string>
    <string name="join_a_group_or_create_a_new_one">Join a group or create a new one</string>
    <string name="create_group">Create group</string>
    <string name="enter_group_name">Enter group name</string>
    <string name="enter_name">Enter name</string>
    <string name="Continue">Continue</string>
    <string name="Cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="deny">Deny</string>
    <string name="your_friend_request_will_be_shown_here">Your friend request will be shown here</string>
    <string name="friend_request">Friend request</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="seems_like_there_is_no_group_here">Seems like there is no group here...</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="no_one_has_joined_this_network_yet">No one has joined this network yet :(</string>
    <string name="type_a_message_here">Type a message here</string>
    <string name="send_message">Send message</string>
    <string name="group_info">Group info</string>
    <string name="june_10">June 10</string>
    <string name="this_is_a_message">This is a Message</string>
    <string name="_10_00">10:00</string>
    <string name="members_of_group">Members of group</string>
    <string name="group_avatar">Group avatar</string>
    <string name="_10">10</string>
    <string name="send_image">Send image</string>
    <string name="type_a_message_to_start_your_conversation">Type a message to start your conversation</string>
    <string name="friends">Friends</string>
    <string name="online">Online</string>
    <string name="groups">Groups</string>
</resources>