<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="@dimen/margin_horizontal"
    android:paddingVertical="@dimen/margin_vertical">

    <ImageView
        android:id="@+id/ivGroupAva"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerVertical="true"
        android:layout_marginEnd="@dimen/margin_horizontal"
        android:contentDescription="@string/username"
        android:src="@drawable/img_group1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/ivGroupAva"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvGroupName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_medium"
            android:includeFontPadding="false"
            android:text="@string/group"
            android:textColor="@color/black"
            android:textSize="@dimen/text_title" />

        <TextView
            android:id="@+id/tvGroupMember"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_3_members"
            android:textSize="@dimen/text_detail" />
    </LinearLayout>

</RelativeLayout>