<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.user.UserInfoActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <ImageButton
            android:id="@+id/ibBack"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_centerVertical="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_arrow_back" />

        <ImageButton
            android:id="@+id/ibQuit"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_sign_out"
            app:tint="@color/colorRed1" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/margin_horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/ivGroupAva"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="@string/group_avatar"
                android:src="@drawable/img_group1" />

            <TextView
                android:id="@+id/tvGroupName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_vertical"
                android:fontFamily="@font/quicksand_medium"
                android:text="@string/group"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/text_tool_bar" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_vertical"
                android:paddingHorizontal="@dimen/margin_horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@id/tvNumberOfMembers"
                    android:fontFamily="@font/poppins"
                    android:text="@string/members_of_group" />

                <TextView
                    android:id="@+id/tvNumberOfMembers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/poppins"
                    android:text="@string/_10" />

            </RelativeLayout>

            <ListView
                android:id="@+id/lvMembers"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:divider="@color/white"
                android:dividerHeight="0dp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>