<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/margin_horizontal"
    android:paddingVertical="@dimen/padding_vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivAva"
            android:layout_width="@dimen/iv_size"
            android:layout_height="@dimen/iv_size"
            android:contentDescription="@string/user_avatar"
            android:src="@drawable/img_user2" />

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_horizontal"
            android:text="@string/username" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_vertical"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorLightGray"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp">

            <TextView
                android:id="@+id/tvMessageReceive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/padding_horizontal"
                android:layout_marginVertical="7dp"
                android:fontFamily="@font/poppins"
                android:maxWidth="260dp"
                android:text="@string/this_is_a_message"
                android:textColor="@color/colorLightBlack" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_horizontal"
            android:text="@string/_10_00"
            android:textColor="@color/colorGray"
            android:textSize="@dimen/text_detail" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_vertical"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        android:visibility="gone">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="fitXY" />

    </androidx.cardview.widget.CardView>

</LinearLayout>