<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="10dp"
    app:cardElevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/title"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/text_tool_bar" />

        <TextView
            android:id="@+id/tvContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_vertical"
            android:fontFamily="@font/poppins"
            android:text="@string/content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="2">

            <androidx.cardview.widget.CardView
                android:id="@+id/btnNegative"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_horizontal"
                android:layout_weight="1"
                android:foreground="?attr/selectableItemBackground"
                app:cardBackgroundColor="@color/colorLightGray"
                app:cardCornerRadius="@dimen/card_radius"
                app:cardElevation="0dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:padding="@dimen/padding_horizontal"
                    android:text="@string/Cancel"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlue2" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/btnPositive"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:foreground="?attr/selectableItemBackground"
                app:cardBackgroundColor="@color/colorBlue2"
                app:cardCornerRadius="@dimen/card_radius"
                app:cardElevation="0dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:padding="@dimen/padding_horizontal"
                    android:text="@string/Continue"
                    android:textAlignment="center"
                    android:textColor="@color/white" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>