<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:paddingHorizontal="@dimen/margin_horizontal"
    android:paddingVertical="@dimen/margin_vertical">

    <ImageView
        android:id="@+id/ivAva"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerVertical="true"
        android:contentDescription="@string/username"
        android:src="@drawable/img_user1" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginHorizontal="@dimen/padding_horizontal"
        android:layout_toStartOf="@id/cvAccept"
        android:layout_toEndOf="@id/ivAva"
        android:fontFamily="@font/quicksand_medium"
        android:includeFontPadding="false"
        android:text="@string/username"
        android:textColor="@color/black"
        android:textSize="@dimen/text_title" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvAccept"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_centerVertical="true"
        android:layout_marginEnd="@dimen/padding_vertical"
        android:layout_toStartOf="@id/cvDeny"
        android:foreground="?attr/selectableItemBackground"
        app:cardBackgroundColor="@color/colorLightGray"
        app:cardCornerRadius="@dimen/card_radius"
        app:cardElevation="0dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@null"
            android:contentDescription="@string/accept"
            android:src="@drawable/ic_round_check_24"
            app:tint="@color/colorBlue2" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvDeny"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:foreground="?attr/selectableItemBackground"
        app:cardBackgroundColor="@color/colorLightGray"
        app:cardCornerRadius="@dimen/card_radius"
        app:cardElevation="0dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@null"
            android:contentDescription="@string/deny"
            android:src="@drawable/ic_round_clear_24"
            app:tint="@color/colorRed1" />

    </androidx.cardview.widget.CardView>

</RelativeLayout>